--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
             <ul class="site-nav list">
               <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-              <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-              <li class="item"><a href="" class="link">Контакты</a></li>
+              <li class="item"><a href="./portfolio.html" class="link noncurrent">Портфолио</a></li>
+              <li class="item"><a href="" class="link noncurrent">Контакты</a></li>
             </ul>
           </nav>
           <ul class="contacts-list list">
@@ -56,7 +56,7 @@
       <section class="section hero-section">
         <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="button hero">Заказать услугу</button>
+          <button data-modal-open type="button" class="button hero">Заказать услугу</button>
         </div>
       </section>
 
@@ -117,29 +117,44 @@
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
             <li class="item">
+              <div class="work-wrapper">
               <img
                 class="work-image"
                 src="./images/keyboard.jpg"
                 alt="работа за клавиатурой ПК"
-                width="370"
+                width="370" 
               />
+              <div class="work-text wrapper">
+               <p class="work-text">Десктопные приложения</p>
+              </div>
+              </div>
             </li>
 
             <li class="item">
+              <div class="work-wrapper">
               <img
                 class="work-image"
                 src="./images/mobilephone.jpg"
                 alt="работа с дизайном продукта на ПК"
                 width="370"
               />
+              <div class="work-text wrapper">
+               <p class="work-text">Мобильные приложения</p>
+              </div>
+              </div>
             </li>
             <li class="item">
+              <div class="work-wrapper">
               <img
                 class="work-image"
                 src="./images/tablet.jpg"
                 alt="работа с выбором цвета продукта на планшете"
                 width="370"
               />
+              <div class="work-text wrapper">
+               <p class="work-text">Дизайнерские решения</p>
+              </div>
+              </div>
             </li>
           </ul>
         </div>
@@ -385,5 +400,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+<div class="modal">
+<button data-modal-close type="button" class="button inmodal">
+  <svg class="modal-svg" width="30" height="30">
+    <use href="./images/icons.svg#icon-close"></use>
+  </svg>
+</button>
+</div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
