--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
           <nav class="main-nav">
             <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
             <ul class="site-nav list">
-              <li class="item"><a href="./index.html" class="link">Студия</a></li>
+              <li class="item"><a href="./index.html" class="link noncurrent">Студия</a></li>
               <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-              <li class="item"><a href="" class="link">Контакты</a></li>
+              <li class="item"><a href="" class="link noncurrent">Контакты</a></li>
             </ul>
           </nav>
           <ul class="contacts-list list">
@@ -57,7 +57,9 @@
         <div class="container">
           <h1 class="title visually-hidden">Примеры наших проэктов</h1>
           <ul class="button-list list">
-            <li class="item"><button type="button" class="button portfolio current">Все</button></li>
+            <li class="item">
+              <button type="button" class="button portfolio current">Все</button>
+            </li>
             <li class="item">
               <button type="button" class="button portfolio">Веб-сайты</button>
             </li>
@@ -75,12 +77,21 @@
           <ul class="examples-list list">
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/technokryak.jpg"
-                  alt="заставка вебсайта Технохряк"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/technokryak.jpg"
+                    alt="заставка вебсайта Технохряк"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Технокряк</h2>
                   <p class="project-field">Веб-сайт</p>
@@ -89,12 +100,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/posterneworleanvsgoldenstar.jpg"
-                  alt="постер игра в баскетбол"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/posterneworleanvsgoldenstar.jpg"
+                    alt="постер игра в баскетбол"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                   <p class="project-field">Дизайн</p>
@@ -103,12 +123,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/restaurantseafood.jpg"
-                  alt="эмблема Ресторан Seafood"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/restaurantseafood.jpg"
+                    alt="эмблема Ресторан Seafood"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Ресторан Seafood</h2>
                   <p class="project-field">Приложение</p>
@@ -117,12 +146,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/projectprime.jpg"
-                  alt="фото наушников"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/projectprime.jpg"
+                    alt="фото наушников"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Проект Prime</h2>
                   <p class="project-field">Маркетинг</p>
@@ -131,12 +169,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/projectboxes.jpg"
-                  alt="изображение двух коробок"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/projectboxes.jpg"
+                    alt="изображение двух коробок"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Проект Boxes</h2>
                   <p class="project-field">Приложение</p>
@@ -145,12 +192,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/inspirationhasnoborders.jpg"
-                  alt="фото монитора ПК с заставкой вебсайта Inspiration has no Borders"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/inspirationhasnoborders.jpg"
+                    alt="фото монитора ПК с заставкой вебсайта Inspiration has no Borders"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Inspiration has no Borders</h2>
                   <p class="project-field">Веб-сайт</p>
@@ -159,12 +215,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/issuelimitededition.jpg"
-                  alt="фото разворота книги"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/issuelimitededition.jpg"
+                    alt="фото разворота книги"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Издание Limited Edition</h2>
                   <p class="project-field">Дизайн</p>
@@ -173,12 +238,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/projectlab.jpg"
-                  alt="изображение бирки с названием проэкта"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/projectlab.jpg"
+                    alt="изображение бирки с названием проэкта"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Проект LAB</h2>
                   <p class="project-field">Маркетинг</p>
@@ -187,12 +261,21 @@
             </li>
             <li class="item">
               <a href="" class="project-link">
-                <img
-                  class="project-image"
-                  src="./images/growingbusiness.jpg"
-                  alt="фото работы с ноутбуком"
-                  width="370"
-                />
+                <div class="project-image-wrapper">
+                  <img
+                    class="project-image"
+                    src="./images/growingbusiness.jpg"
+                    alt="фото работы с ноутбуком"
+                    width="370"
+                  />
+                  <div class="project-text-wrapper is-hidden">
+                    <p class="project-text">
+                      Технокряк это современная площадка распространения коронавируса. Компании
+                      используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="project-content">
                   <h2 class="project-title">Growing Business</h2>
                   <p class="project-field">Приложение</p>
@@ -212,7 +295,8 @@
 
             <address>
               <a href="https://goo.gl/maps/RCxTANofW1ampnam6" class="map"
-                >г. Киев, пр-т Леси Украинки, 26</a>
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
 
               <a href="mailto:info@example.com" class="contact date">info@example.com</a>
 
